# grpo_server

./: .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml  start_service.py
.github/workflows/: ci.yml
examples/: alphabetical.py  simplest.py
grpo_server/: data.py  grpo_client.py  grpo_dataset.py  grpo_queuer.py  grpo_service.py  grpo_trainer.py  grpo_trainer_reversed.py  testing_utils.py  uvicorn_main.py
grpo_server/testing/: simple_linear_lm.py  testing_utils.py
test_data/: README.md
test_data/simple_linear_40_5/: config.json  generation_config.json  model.safetensors  tokenizer_config.json
test_data/simple_linear_49152_5/: config.json  model.safetensors
tests/: test_e2e.py  test_grpo_trainer.py  test_testing_utils.py
