[tool.poetry]
name = "grpo-server"
version = "0.1.0"
description = ""
authors = ["Tuomas J. Lukka <tuomas@hipcode.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
transformers = "^4.48.1"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
janus = "^2.0.0"
ipykernel = "^6.29.5"
trl = { git = "https://github.com/huggingface/trl.git", rev="62685fbf2037dab9d8f49d95a8401beb3bfb3837" }
docker = "^7.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
